fixing note, other small components for dark mode

--- a/less/shared/defaults.less
+++ b/less/shared/defaults.less
@@ -387,4 +387,8 @@ iframe {
     code {
         background-color: #555;
     }
+
+    strong {
+        color: #ccc;
+    }
 }
